use yarn, bump deps, nvmrc reformat

--- a/docs/classes/_it8951_.it8951.md
+++ b/docs/classes/_it8951_.it8951.md
@@ -35,7 +35,7 @@
 
 \+ **new IT8951**(`vcom?`: undefined | number): *[IT8951](_it8951_.it8951.md)*
 
-*Defined in [it8951.ts:391](https://github.com/gnzzz/IT8951/blob/79fe446/lib/it8951.ts#L391)*
+*Defined in [it8951.ts:391](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L391)*
 
 Creates an instance of IT8951. If the voltage is omitted then the controller default of -1.5v is used.
 
@@ -53,7 +53,7 @@ Name | Type | Description |
 
 • **get vcom**(): *number*
 
-*Defined in [it8951.ts:432](https://github.com/gnzzz/IT8951/blob/79fe446/lib/it8951.ts#L432)*
+*Defined in [it8951.ts:432](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L432)*
 
 Return the voltage
 
@@ -61,7 +61,7 @@ Return the voltage
 
 • **set vcom**(`vcom`: number): *void*
 
-*Defined in [it8951.ts:445](https://github.com/gnzzz/IT8951/blob/79fe446/lib/it8951.ts#L445)*
+*Defined in [it8951.ts:445](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L445)*
 
 Sets the voltage
 
@@ -79,7 +79,7 @@ Name | Type |
 
 ▸ **displayArea**(`x`: number, `y`: number, `width`: number, `height`: number, `mode`: [WAVEFORM](../enums/_it8951_.waveform.md)): *void*
 
-*Defined in [it8951.ts:550](https://github.com/gnzzz/IT8951/blob/79fe446/lib/it8951.ts#L550)*
+*Defined in [it8951.ts:543](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L543)*
 
 Updates a region of the screen with a previously loaded image.
 
@@ -101,7 +101,7 @@ ___
 
 ▸ **readRegister**(`address`: number | SYS_REG): *number*
 
-*Defined in [it8951.ts:472](https://github.com/gnzzz/IT8951/blob/79fe446/lib/it8951.ts#L472)*
+*Defined in [it8951.ts:472](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L472)*
 
 Reads register value at `address`
 
@@ -119,7 +119,7 @@ ___
 
 ▸ **reset**(): *any*
 
-*Defined in [it8951.ts:621](https://github.com/gnzzz/IT8951/blob/79fe446/lib/it8951.ts#L621)*
+*Defined in [it8951.ts:614](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L614)*
 
 Resets the controller.
 
@@ -131,7 +131,7 @@ ___
 
 ▸ **run**(): *void*
 
-*Defined in [it8951.ts:573](https://github.com/gnzzz/IT8951/blob/79fe446/lib/it8951.ts#L573)*
+*Defined in [it8951.ts:566](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L566)*
 
 Issues the display running command.
 
@@ -145,7 +145,7 @@ ___
 
 ▸ **setRegister**(`address`: number | SYS_REG, `value`: number): *void*
 
-*Defined in [it8951.ts:459](https://github.com/gnzzz/IT8951/blob/79fe446/lib/it8951.ts#L459)*
+*Defined in [it8951.ts:459](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L459)*
 
 Sets register `address` to `value`.
 
@@ -164,7 +164,7 @@ ___
 
 ▸ **sleep**(): *void*
 
-*Defined in [it8951.ts:595](https://github.com/gnzzz/IT8951/blob/79fe446/lib/it8951.ts#L595)*
+*Defined in [it8951.ts:588](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L588)*
 
 Issues the display sleep command.
 
@@ -178,7 +178,7 @@ ___
 
 ▸ **standby**(): *void*
 
-*Defined in [it8951.ts:584](https://github.com/gnzzz/IT8951/blob/79fe446/lib/it8951.ts#L584)*
+*Defined in [it8951.ts:577](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L577)*
 
 Issues the display standby command.
 
@@ -192,7 +192,7 @@ ___
 
 ▸ **systemInfo**(): *[SystemInfo](../interfaces/_it8951_.systeminfo.md)*
 
-*Defined in [it8951.ts:411](https://github.com/gnzzz/IT8951/blob/79fe446/lib/it8951.ts#L411)*
+*Defined in [it8951.ts:411](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L411)*
 
 Queries the controller for the dev info.
 
@@ -202,13 +202,13 @@ ___
 
 ###  waitForDisplayReady
 
-▸ **waitForDisplayReady**(): *Promise‹unknown›*
+▸ **waitForDisplayReady**(): *Promise‹void›*
 
-*Defined in [it8951.ts:606](https://github.com/gnzzz/IT8951/blob/79fe446/lib/it8951.ts#L606)*
+*Defined in [it8951.ts:599](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L599)*
 
 Returns a promise that resolves when all the lut engines are ready.
 
-**Returns:** *Promise‹unknown›*
+**Returns:** *Promise‹void›*
 
 ___
 
@@ -216,7 +216,7 @@ ___
 
 ▸ **writePixels**(`x`: number, `y`: number, `width`: number, `height`: number, `image`: Buffer, `bpp`: [PIXEL_PACKING](../enums/_it8951_.pixel_packing.md), `rotate`: [IMAGE_ROTATION](../enums/_it8951_.image_rotation.md), `endianism`: [ENDIANNESS](../enums/_it8951_.endianness.md)): *void*
 
-*Defined in [it8951.ts:493](https://github.com/gnzzz/IT8951/blob/79fe446/lib/it8951.ts#L493)*
+*Defined in [it8951.ts:493](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L493)*
 
 Loads an image to memory without updating display.
 
