--- a/docs/classes/_it8951_.it8951.md
+++ b/docs/classes/_it8951_.it8951.md
@@ -4,233 +4,233 @@
 
 ## Hierarchy
 
-* **IT8951**
+- **IT8951**
 
 ## Index
 
 ### Constructors
 
-* [constructor](_it8951_.it8951.md#constructor)
+- [constructor](_it8951_.it8951.md#constructor)
 
 ### Accessors
 
-* [vcom](_it8951_.it8951.md#vcom)
+- [vcom](_it8951_.it8951.md#vcom)
 
 ### Methods
 
-* [displayArea](_it8951_.it8951.md#displayarea)
-* [readRegister](_it8951_.it8951.md#readregister)
-* [reset](_it8951_.it8951.md#reset)
-* [run](_it8951_.it8951.md#run)
-* [setRegister](_it8951_.it8951.md#setregister)
-* [sleep](_it8951_.it8951.md#sleep)
-* [standby](_it8951_.it8951.md#standby)
-* [systemInfo](_it8951_.it8951.md#systeminfo)
-* [waitForDisplayReady](_it8951_.it8951.md#waitfordisplayready)
-* [writePixels](_it8951_.it8951.md#writepixels)
+- [displayArea](_it8951_.it8951.md#displayarea)
+- [readRegister](_it8951_.it8951.md#readregister)
+- [reset](_it8951_.it8951.md#reset)
+- [run](_it8951_.it8951.md#run)
+- [setRegister](_it8951_.it8951.md#setregister)
+- [sleep](_it8951_.it8951.md#sleep)
+- [standby](_it8951_.it8951.md#standby)
+- [systemInfo](_it8951_.it8951.md#systeminfo)
+- [waitForDisplayReady](_it8951_.it8951.md#waitfordisplayready)
+- [writePixels](_it8951_.it8951.md#writepixels)
 
 ## Constructors
 
-###  constructor
+### constructor
 
-\+ **new IT8951**(`vcom?`: undefined | number): *[IT8951](_it8951_.it8951.md)*
+\+ **new IT8951**(`vcom?`: undefined | number): _[IT8951](_it8951_.it8951.md)_
 
-*Defined in [it8951.ts:391](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L391)*
+_Defined in [it8951.ts:391](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L391)_
 
 Creates an instance of IT8951. If the voltage is omitted then the controller default of -1.5v is used.
 
 **Parameters:**
 
-Name | Type | Description |
------- | ------ | ------ |
-`vcom?` | undefined &#124; number | Set the voltage of the display.  |
+| Name    | Type                    | Description                     |
+| ------- | ----------------------- | ------------------------------- |
+| `vcom?` | undefined &#124; number | Set the voltage of the display. |
 
-**Returns:** *[IT8951](_it8951_.it8951.md)*
+**Returns:** _[IT8951](_it8951_.it8951.md)_
 
 ## Accessors
 
-###  vcom
+### vcom
 
-• **get vcom**(): *number*
+• **get vcom**(): _number_
 
-*Defined in [it8951.ts:432](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L432)*
+_Defined in [it8951.ts:432](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L432)_
 
 Return the voltage
 
-**Returns:** *number*
+**Returns:** _number_
 
-• **set vcom**(`vcom`: number): *void*
+• **set vcom**(`vcom`: number): _void_
 
-*Defined in [it8951.ts:445](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L445)*
+_Defined in [it8951.ts:445](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L445)_
 
 Sets the voltage
 
 **Parameters:**
 
-Name | Type |
------- | ------ |
-`vcom` | number |
+| Name   | Type   |
+| ------ | ------ |
+| `vcom` | number |
 
-**Returns:** *void*
+**Returns:** _void_
 
 ## Methods
 
-###  displayArea
+### displayArea
 
-▸ **displayArea**(`x`: number, `y`: number, `width`: number, `height`: number, `mode`: [WAVEFORM](../enums/_it8951_.waveform.md)): *void*
+▸ **displayArea**(`x`: number, `y`: number, `width`: number, `height`: number, `mode`: [WAVEFORM](../enums/_it8951_.waveform.md)): _void_
 
-*Defined in [it8951.ts:543](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L543)*
+_Defined in [it8951.ts:543](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L543)_
 
 Updates a region of the screen with a previously loaded image.
 
 **Parameters:**
 
-Name | Type | Description |
------- | ------ | ------ |
-`x` | number | vertical start of area to dsiplay |
-`y` | number | horizontal start of area to dsiplay |
-`width` | number | width of data to dsiplay |
-`height` | number | height of data to dsiplay |
-`mode` | [WAVEFORM](../enums/_it8951_.waveform.md) | waveform mode to update display  |
+| Name     | Type                                      | Description                         |
+| -------- | ----------------------------------------- | ----------------------------------- |
+| `x`      | number                                    | vertical start of area to dsiplay   |
+| `y`      | number                                    | horizontal start of area to dsiplay |
+| `width`  | number                                    | width of data to dsiplay            |
+| `height` | number                                    | height of data to dsiplay           |
+| `mode`   | [WAVEFORM](../enums/_it8951_.waveform.md) | waveform mode to update display     |
 
-**Returns:** *void*
+**Returns:** _void_
 
-___
+---
 
-###  readRegister
+### readRegister
 
-▸ **readRegister**(`address`: number | SYS_REG): *number*
+▸ **readRegister**(`address`: number | SYS_REG): _number_
 
-*Defined in [it8951.ts:472](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L472)*
+_Defined in [it8951.ts:472](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L472)_
 
 Reads register value at `address`
 
 **Parameters:**
 
-Name | Type | Description |
------- | ------ | ------ |
-`address` | number &#124; SYS_REG | Address value to read  |
+| Name      | Type                  | Description           |
+| --------- | --------------------- | --------------------- |
+| `address` | number &#124; SYS_REG | Address value to read |
 
-**Returns:** *number*
+**Returns:** _number_
 
-___
+---
 
-###  reset
+### reset
 
-▸ **reset**(): *any*
+▸ **reset**(): _any_
 
-*Defined in [it8951.ts:614](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L614)*
+_Defined in [it8951.ts:614](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L614)_
 
 Resets the controller.
 
-**Returns:** *any*
+**Returns:** _any_
 
-___
+---
 
-###  run
+### run
 
-▸ **run**(): *void*
+▸ **run**(): _void_
 
-*Defined in [it8951.ts:566](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L566)*
+_Defined in [it8951.ts:566](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L566)_
 
 Issues the display running command.
 
 Enables all clocks and goes to active state.
 
-**Returns:** *void*
+**Returns:** _void_
 
-___
+---
 
-###  setRegister
+### setRegister
 
-▸ **setRegister**(`address`: number | SYS_REG, `value`: number): *void*
+▸ **setRegister**(`address`: number | SYS_REG, `value`: number): _void_
 
-*Defined in [it8951.ts:459](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L459)*
+_Defined in [it8951.ts:459](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L459)_
 
 Sets register `address` to `value`.
 
 **Parameters:**
 
-Name | Type | Description |
------- | ------ | ------ |
-`address` | number &#124; SYS_REG | Address value to set |
-`value` | number | Value to set  |
+| Name      | Type                  | Description          |
+| --------- | --------------------- | -------------------- |
+| `address` | number &#124; SYS_REG | Address value to set |
+| `value`   | number                | Value to set         |
 
-**Returns:** *void*
+**Returns:** _void_
 
-___
+---
 
-###  sleep
+### sleep
 
-▸ **sleep**(): *void*
+▸ **sleep**(): _void_
 
-*Defined in [it8951.ts:588](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L588)*
+_Defined in [it8951.ts:588](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L588)_
 
 Issues the display sleep command.
 
 Disables all clocks and goes to sleep state.
 
-**Returns:** *void*
+**Returns:** _void_
 
-___
+---
 
-###  standby
+### standby
 
-▸ **standby**(): *void*
+▸ **standby**(): _void_
 
-*Defined in [it8951.ts:577](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L577)*
+_Defined in [it8951.ts:577](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L577)_
 
 Issues the display standby command.
 
 Gate off clocks and go to standby state.
 
-**Returns:** *void*
+**Returns:** _void_
 
-___
+---
 
-###  systemInfo
+### systemInfo
 
-▸ **systemInfo**(): *[SystemInfo](../interfaces/_it8951_.systeminfo.md)*
+▸ **systemInfo**(): _[SystemInfo](../interfaces/_it8951_.systeminfo.md)_
 
-*Defined in [it8951.ts:411](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L411)*
+_Defined in [it8951.ts:411](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L411)_
 
 Queries the controller for the dev info.
 
-**Returns:** *[SystemInfo](../interfaces/_it8951_.systeminfo.md)*
+**Returns:** _[SystemInfo](../interfaces/_it8951_.systeminfo.md)_
 
-___
+---
 
-###  waitForDisplayReady
+### waitForDisplayReady
 
-▸ **waitForDisplayReady**(): *Promise‹void›*
+▸ **waitForDisplayReady**(): _Promise‹void›_
 
-*Defined in [it8951.ts:599](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L599)*
+_Defined in [it8951.ts:599](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L599)_
 
 Returns a promise that resolves when all the lut engines are ready.
 
-**Returns:** *Promise‹void›*
+**Returns:** _Promise‹void›_
 
-___
+---
 
-###  writePixels
+### writePixels
 
-▸ **writePixels**(`x`: number, `y`: number, `width`: number, `height`: number, `image`: Buffer, `bpp`: [PIXEL_PACKING](../enums/_it8951_.pixel_packing.md), `rotate`: [IMAGE_ROTATION](../enums/_it8951_.image_rotation.md), `endianism`: [ENDIANNESS](../enums/_it8951_.endianness.md)): *void*
+▸ **writePixels**(`x`: number, `y`: number, `width`: number, `height`: number, `image`: Buffer, `bpp`: [PIXEL_PACKING](../enums/_it8951_.pixel_packing.md), `rotate`: [IMAGE_ROTATION](../enums/_it8951_.image_rotation.md), `endianism`: [ENDIANNESS](../enums/_it8951_.endianness.md)): _void_
 
-*Defined in [it8951.ts:493](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L493)*
+_Defined in [it8951.ts:493](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L493)_
 
 Loads an image to memory without updating display.
 
 **Parameters:**
 
-Name | Type | Default | Description |
------- | ------ | ------ | ------ |
-`x` | number | - | vertical start of area to load |
-`y` | number | - | horizontal start of area to load |
-`width` | number | - | width of data to load |
-`height` | number | - | height of data to load |
-`image` | Buffer | - | data endianness  |
-`bpp` | [PIXEL_PACKING](../enums/_it8951_.pixel_packing.md) | - | byte packing of image data |
-`rotate` | [IMAGE_ROTATION](../enums/_it8951_.image_rotation.md) | IMAGE_ROTATION.ROTATE_0 | data for storage |
-`endianism` | [ENDIANNESS](../enums/_it8951_.endianness.md) | ENDIANNESS.LITTLE | - |
+| Name        | Type                                                  | Default                 | Description                      |
+| ----------- | ----------------------------------------------------- | ----------------------- | -------------------------------- |
+| `x`         | number                                                | -                       | vertical start of area to load   |
+| `y`         | number                                                | -                       | horizontal start of area to load |
+| `width`     | number                                                | -                       | width of data to load            |
+| `height`    | number                                                | -                       | height of data to load           |
+| `image`     | Buffer                                                | -                       | data endianness                  |
+| `bpp`       | [PIXEL_PACKING](../enums/_it8951_.pixel_packing.md)   | -                       | byte packing of image data       |
+| `rotate`    | [IMAGE_ROTATION](../enums/_it8951_.image_rotation.md) | IMAGE_ROTATION.ROTATE_0 | data for storage                 |
+| `endianism` | [ENDIANNESS](../enums/_it8951_.endianness.md)         | ENDIANNESS.LITTLE       | -                                |
 
-**Returns:** *void*
+**Returns:** _void_
