--- a/docs/enums/_it8951_.image_rotation.md
+++ b/docs/enums/_it8951_.image_rotation.md
@@ -4,53 +4,53 @@
 
 Image rotation. All rotations are clockwise from the base of the screen.
 
-**`export`** 
+**`export`**
 
 ## Index
 
 ### Enumeration members
 
-* [ROTATE_0](_it8951_.image_rotation.md#rotate_0)
-* [ROTATE_180](_it8951_.image_rotation.md#rotate_180)
-* [ROTATE_270](_it8951_.image_rotation.md#rotate_270)
-* [ROTATE_90](_it8951_.image_rotation.md#rotate_90)
+- [ROTATE_0](_it8951_.image_rotation.md#rotate_0)
+- [ROTATE_180](_it8951_.image_rotation.md#rotate_180)
+- [ROTATE_270](_it8951_.image_rotation.md#rotate_270)
+- [ROTATE_90](_it8951_.image_rotation.md#rotate_90)
 
 ## Enumeration members
 
-###  ROTATE_0
+### ROTATE_0
 
 • **ROTATE_0**: = 0
 
-*Defined in [it8951.ts:212](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L212)*
+_Defined in [it8951.ts:212](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L212)_
 
 Rotate zero degrees. Default rotation in methods supporting rotation.
 
-___
+---
 
-###  ROTATE_180
+### ROTATE_180
 
 • **ROTATE_180**: = 2
 
-*Defined in [it8951.ts:220](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L220)*
+_Defined in [it8951.ts:220](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L220)_
 
 Rotate 180 degress.
 
-___
+---
 
-###  ROTATE_270
+### ROTATE_270
 
 • **ROTATE_270**: = 3
 
-*Defined in [it8951.ts:224](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L224)*
+_Defined in [it8951.ts:224](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L224)_
 
 Rotate 270 degrees.
 
-___
+---
 
-###  ROTATE_90
+### ROTATE_90
 
 • **ROTATE_90**: = 1
 
-*Defined in [it8951.ts:216](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L216)*
+_Defined in [it8951.ts:216](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L216)_
 
 Rotate 90 degrees.
