--- a/docs/enums/_it8951_.waveform.md
+++ b/docs/enums/_it8951_.waveform.md
@@ -4,28 +4,28 @@
 
 Waveform mode used when updating the display. Further information is available in the [mode declaration](https://www.waveshare.com/w/upload/c/c4/E-paper-mode-declaration.pdf).
 
-**`export`** 
+**`export`**
 
 ## Index
 
 ### Enumeration members
 
-* [A2](_it8951_.waveform.md#a2)
-* [DU](_it8951_.waveform.md#du)
-* [DU4](_it8951_.waveform.md#du4)
-* [GC16](_it8951_.waveform.md#gc16)
-* [GL16](_it8951_.waveform.md#gl16)
-* [GLD16](_it8951_.waveform.md#gld16)
-* [GLR16](_it8951_.waveform.md#glr16)
-* [INIT](_it8951_.waveform.md#init)
+- [A2](_it8951_.waveform.md#a2)
+- [DU](_it8951_.waveform.md#du)
+- [DU4](_it8951_.waveform.md#du4)
+- [GC16](_it8951_.waveform.md#gc16)
+- [GL16](_it8951_.waveform.md#gl16)
+- [GLD16](_it8951_.waveform.md#gld16)
+- [GLR16](_it8951_.waveform.md#glr16)
+- [INIT](_it8951_.waveform.md#init)
 
 ## Enumeration members
 
-###  A2
+### A2
 
 • **A2**: = 6
 
-*Defined in [it8951.ts:373](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L373)*
+_Defined in [it8951.ts:373](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L373)_
 
 The A2 mode is a fast, non-flash update mode designed for fast paging turning or simple black/white
 animation. This mode supports transitions from and to black or white only. It cannot be used to update to
@@ -39,13 +39,13 @@ reduce ghosting and improve image quality for A2 updates.
 
 **Typical update time:** 120ms
 
-___
+---
 
-###  DU
+### DU
 
 • **DU**: = 1
 
-*Defined in [it8951.ts:301](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L301)*
+_Defined in [it8951.ts:301](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L301)_
 
 The direct update (DU) is a very fast, non-flashy update. This mode supports transitions from any graytone
 to black or white only. It cannot be used to update to any graytone other than black or white. The fast
@@ -58,13 +58,13 @@ indictors.
 
 **Typical update time:** 260ms
 
-___
+---
 
-###  DU4
+### DU4
 
 • **DU4**: = 7
 
-*Defined in [it8951.ts:386](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L386)*
+_Defined in [it8951.ts:386](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L386)_
 
 The DU4 is a fast update time (similar to DU), non-flashy waveform. This mode supports transitions from
 any gray tone to gray tones 1,6,11,16 represented by pixel states [0 10 20 30]. The combination of fast
@@ -77,13 +77,13 @@ in ghosting compared with GC16.
 
 **Typical update time:** 290ms
 
-___
+---
 
-###  GC16
+### GC16
 
 • **GC16**: = 2
 
-*Defined in [it8951.ts:314](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L314)*
+_Defined in [it8951.ts:314](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L314)_
 
 The grayscale clearing (GC16) mode is used to update the full display and provide a high image quality.
 When GC16 is used with Full Display Update the entire display will update as the new image is written. If a
@@ -96,13 +96,13 @@ has 16 unique gray levels.
 
 **Typical update time:** 450ms
 
-___
+---
 
-###  GL16
+### GL16
 
 • **GL16**: = 3
 
-*Defined in [it8951.ts:325](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L325)*
+_Defined in [it8951.ts:325](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L325)_
 
 The GL16 waveform is primarily used to update sparse content on a white background, such as a page of
 anti-aliased text, with reduced flash. The GL16 waveform has 16 unique gray levels.
@@ -113,13 +113,13 @@ anti-aliased text, with reduced flash. The GL16 waveform has 16 unique gray leve
 
 **Typical update time:** 450ms
 
-___
+---
 
-###  GLD16
+### GLD16
 
 • **GLD16**: = 5
 
-*Defined in [it8951.ts:359](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L359)*
+_Defined in [it8951.ts:359](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L359)_
 
 The GLD16 mode is used in conjunction with an image preprocessing algorithm to update sparse content
 on a white background with reduced flash and reduced image artifacts. It is recommended to be used only
@@ -137,13 +137,13 @@ GL16 data and does not need to be stored in a separate memory.
 
 **Typical update time:** 450ms
 
-___
+---
 
-###  GLR16
+### GLR16
 
 • **GLR16**: = 4
 
-*Defined in [it8951.ts:341](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L341)*
+_Defined in [it8951.ts:341](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L341)_
 
 The GLR16 mode is used in conjunction with an image preprocessing algorithm to update sparse content on
 a white background with reduced flash and reduced image artifacts. The GLR16 mode supports 16
@@ -159,13 +159,13 @@ need to be stored in a separate memory.
 
 **Typical update time:** 450ms
 
-___
+---
 
-###  INIT
+### INIT
 
 • **INIT**: = 0
 
-*Defined in [it8951.ts:288](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L288)*
+_Defined in [it8951.ts:288](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L288)_
 
 The initialization (INIT) mode is used to completely erase the display and leave it in the white state. It is
 useful for situations where the display information in memory is not a faithful representation of the optical
