--- a/docs/interfaces/_it8951_.systeminfo.md
+++ b/docs/interfaces/_it8951_.systeminfo.md
@@ -4,68 +4,68 @@
 
 Return object for system information call.
 
-**`export`** 
+**`export`**
 
 ## Hierarchy
 
-* **SystemInfo**
+- **SystemInfo**
 
 ## Index
 
 ### Properties
 
-* [firmware](_it8951_.systeminfo.md#firmware)
-* [height](_it8951_.systeminfo.md#height)
-* [imbufferadr](_it8951_.systeminfo.md#imbufferadr)
-* [lut](_it8951_.systeminfo.md#lut)
-* [width](_it8951_.systeminfo.md#width)
+- [firmware](_it8951_.systeminfo.md#firmware)
+- [height](_it8951_.systeminfo.md#height)
+- [imbufferadr](_it8951_.systeminfo.md#imbufferadr)
+- [lut](_it8951_.systeminfo.md#lut)
+- [width](_it8951_.systeminfo.md#width)
 
 ## Properties
 
-###  firmware
+### firmware
 
-• **firmware**: *string*
+• **firmware**: _string_
 
-*Defined in [it8951.ts:29](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L29)*
+_Defined in [it8951.ts:29](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L29)_
 
 Firmware version.
 
-___
+---
 
-###  height
+### height
 
-• **height**: *number*
+• **height**: _number_
 
-*Defined in [it8951.ts:21](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L21)*
+_Defined in [it8951.ts:21](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L21)_
 
 Height of screen in pixels.
 
-___
+---
 
-###  imbufferadr
+### imbufferadr
 
-• **imbufferadr**: *number*
+• **imbufferadr**: _number_
 
-*Defined in [it8951.ts:25](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L25)*
+_Defined in [it8951.ts:25](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L25)_
 
 Internal image buffer address.
 
-___
+---
 
-###  lut
+### lut
 
-• **lut**: *string*
+• **lut**: _string_
 
-*Defined in [it8951.ts:33](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L33)*
+_Defined in [it8951.ts:33](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L33)_
 
 LUT loaded.
 
-___
+---
 
-###  width
+### width
 
-• **width**: *number*
+• **width**: _number_
 
-*Defined in [it8951.ts:17](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L17)*
+_Defined in [it8951.ts:17](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L17)_
 
 Width of screen in pixels.
