--- a/docs/modules/_it8951_.md
+++ b/docs/modules/_it8951_.md
@@ -8,15 +8,15 @@ Class to controll IT8951. Implemented based on waveshare [documentation](https:/
 
 ### Enumerations
 
-* [ENDIANNESS](../enums/_it8951_.endianness.md)
-* [IMAGE_ROTATION](../enums/_it8951_.image_rotation.md)
-* [PIXEL_PACKING](../enums/_it8951_.pixel_packing.md)
-* [WAVEFORM](../enums/_it8951_.waveform.md)
+- [ENDIANNESS](../enums/_it8951_.endianness.md)
+- [IMAGE_ROTATION](../enums/_it8951_.image_rotation.md)
+- [PIXEL_PACKING](../enums/_it8951_.pixel_packing.md)
+- [WAVEFORM](../enums/_it8951_.waveform.md)
 
 ### Classes
 
-* [IT8951](../classes/_it8951_.it8951.md)
+- [IT8951](../classes/_it8951_.it8951.md)
 
 ### Interfaces
 
-* [SystemInfo](../interfaces/_it8951_.systeminfo.md)
+- [SystemInfo](../interfaces/_it8951_.systeminfo.md)
