--- a/docs/enums/_it8951_.endianness.md
+++ b/docs/enums/_it8951_.endianness.md
@@ -4,31 +4,31 @@
 
 Endianness of the image data. Only relevant when sending data less than 8BPP.
 
-**`export`** 
+**`export`**
 
 ## Index
 
 ### Enumeration members
 
-* [BIG](_it8951_.endianness.md#big)
-* [LITTLE](_it8951_.endianness.md#little)
+- [BIG](_it8951_.endianness.md#big)
+- [LITTLE](_it8951_.endianness.md#little)
 
 ## Enumeration members
 
-###  BIG
+### BIG
 
 • **BIG**: = 1
 
-*Defined in [it8951.ts:267](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L267)*
+_Defined in [it8951.ts:267](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L267)_
 
 Data is packed with big endian order.
 
-___
+---
 
-###  LITTLE
+### LITTLE
 
 • **LITTLE**: = 0
 
-*Defined in [it8951.ts:263](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L263)*
+_Defined in [it8951.ts:263](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L263)_
 
 Data is packed with little endian order.
