--- a/docs/enums/_it8951_.pixel_packing.md
+++ b/docs/enums/_it8951_.pixel_packing.md
@@ -4,53 +4,53 @@
 
 Pixel packaging mode.
 
-**`export`** 
+**`export`**
 
 ## Index
 
 ### Enumeration members
 
-* [BPP2](_it8951_.pixel_packing.md#bpp2)
-* [BPP3](_it8951_.pixel_packing.md#bpp3)
-* [BPP4](_it8951_.pixel_packing.md#bpp4)
-* [BPP8](_it8951_.pixel_packing.md#bpp8)
+- [BPP2](_it8951_.pixel_packing.md#bpp2)
+- [BPP3](_it8951_.pixel_packing.md#bpp3)
+- [BPP4](_it8951_.pixel_packing.md#bpp4)
+- [BPP8](_it8951_.pixel_packing.md#bpp8)
 
 ## Enumeration members
 
-###  BPP2
+### BPP2
 
 • **BPP2**: = 0
 
-*Defined in [it8951.ts:237](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L237)*
+_Defined in [it8951.ts:237](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L237)_
 
 Two bits per pixel
 
-___
+---
 
-###  BPP3
+### BPP3
 
 • **BPP3**: = 1
 
-*Defined in [it8951.ts:241](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L241)*
+_Defined in [it8951.ts:241](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L241)_
 
 Three bits per pixel
 
-___
+---
 
-###  BPP4
+### BPP4
 
 • **BPP4**: = 2
 
-*Defined in [it8951.ts:245](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L245)*
+_Defined in [it8951.ts:245](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L245)_
 
 Four bits per pixel
 
-___
+---
 
-###  BPP8
+### BPP8
 
 • **BPP8**: = 3
 
-*Defined in [it8951.ts:249](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L249)*
+_Defined in [it8951.ts:249](https://github.com/xPapla/IT8951/blob/7cfbaa9/lib/it8951.ts#L249)_
 
 Eight bits per pixel
